---
config:
  layout: elk
---
classDiagram

    class BaseTableComponent {
        <<abstract>>
    }

    class GenericTableComponent~T~ {
        <<abstract>>
    }

    class PetriNetTableComponent {

    }

    class DynamicPetriNetTableComponent {

    }

    class ComputationSelectComponent {

    }

    class PetriNetRow {
        -StringProperty name
        -StringProperty author
        -ObjectProperty~LocalDateTime~ lastModified
        -ObjectProperty~Status~ status
        -ObjectProperty~NetCategory~ type
    }

    class ComputationRow {
        -StringProperty ID
        -StringProperty username
        -ObjectProperty~LocalDateTime~ initTime
        -ObjectProperty~LocalDateTime~ endTime
        -ObjectProperty~Status~ status
    }

    class Status {
        <<enumeration>>
        IN_ATTESA
        IN_CORSO
        NON_INIZIATO
        COMPLETATO
    }

    class NetCategory {
        <<enumeration>>
        POSSEDUTE("Creazioni")
        SOTTOSCRITTE("Sottoscrizioni")
        SCOPRI("Scopri")
    }

    class ShowAllController {
    }

    class HomeController {
    }

    class ComputationListController {
    }

%% Relazioni di Ereditarietà
    BaseTableComponent <|-- GenericTableComponent : estende
    GenericTableComponent <|-- PetriNetTableComponent : estende
    GenericTableComponent <|-- ComputationSelectComponent : estende
    PetriNetTableComponent <|-- DynamicPetriNetTableComponent : estende

%% Relazioni di Utilizzo
    GenericTableComponent "1" *-- "0..*" PetriNetRow
    GenericTableComponent "1" *-- "0..*" ComputationRow

%% Relazioni di Composizione
    PetriNetRow --> Status : contiene
    PetriNetRow --> NetCategory : contiene
    ComputationRow --> Status : contiene

%% Relazioni Controller-Componente
    ShowAllController --> PetriNetTableComponent : crea/utilizza
    HomeController --> DynamicPetriNetTableComponent : crea/utilizza
    ComputationListController --> ComputationSelectComponent : crea/utilizza

%% Relazioni Controller-Dati
    ShowAllController ..> PetriNetRow : crea
    HomeController ..> PetriNetRow : crea
    ComputationListController ..> ComputationRow : crea

%% Note Esplicative
    note "Classe base astratta che gestisce <br> il caricamento FXML e l'inizializzazione"
    note for GenericTableComponent "Componente tabella generico con <br> operazioni type-safe"
    note for DynamicPetriNetTableComponent "Tabella a dimensione dinamica con <br> limitazione massima di righe"